--- a/MovieLens.Rmd
+++ b/MovieLens.Rmd
@@ -82,17 +82,19 @@ if(!require(tidyverse))
 if(!require(caret)) 
   install.packages("caret", repos = "http://cran.us.r-project.org")
 
+data_dir <- "D:/Edex/Data_Science_Capstone_MovieLens/ml-10M100K"
+ratings_file <- file.path(data_dir, "ratings.dat")
+movies_file <- file.path(data_dir, "movies.dat")
+
 dl <- "ml-10M100K.zip"
-if(!file.exists(dl))
+if (!file.exists(dl)) {
   download.file("https://files.grouplens.org/datasets/movielens/ml-10m.zip", dl)
+  unzip(dl, exdir = data_dir)
+}
 
-ratings_file <- "D:/Edex/Data_Science_Capstone_MovieLens/ml-10M100K/ratings.dat"
-if(!file.exists(ratings_file))
-  unzip(dl, ratings_file)
-
-movies_file <- "D:/Edex/Data_Science_Capstone_MovieLens/ml-10M100K/movies.dat"
-if(!file.exists(movies_file))
-  unzip(dl, movies_file)
+if (!file.exists(ratings_file) || !file.exists(movies_file)) {
+  stop("Failed to extract the required data files. Check file paths.")
+}
 
 ratings <- as.data.frame(str_split(read_lines(ratings_file), fixed("::"), simplify = TRUE),
                          stringsAsFactors = FALSE)
